tests/models/enum/named/vec/fail/gt.stderr
error: Support condition is min_items, max_items, alias and validate
 --> tests/models/enum/named/vec/fail/gt.rs:6:9
  |
6 |         value: Vec<()>
  |         ^^^^^
